byte-code-compiler/test_files/typing/bad/testfile-scope-2.psc
i32 main() {
    i32 x; 
    if(x) { 
        i32 y;
    } else {
        y;
    } 
}
